added ET sensitivity

--- a/notebook/GW-CCN-1D.ipynb
+++ b/notebook/GW-CCN-1D.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "fe5ce6db-51e3-4806-a7d1-58953693f164",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# 1-D CCN application to a set of different CCSN waveform"
    ]
@@ -65,9 +71,32 @@
   {
    "cell_type": "markdown",
    "id": "93d0aeb7-2226-4969-bfde-f1b6b904d077",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "The sensitivity of the Einstein Telescope is expected to be several orders of magnitude higher than existing detectors like LIGO and Virgo. This enhanced sensitivity opens up new possibilities for detecting a wider range of gravitational wave sources and extracting more detailed information from the observed signals. We simulated the detector noise as in the case of the Einstein Telescope."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20b462e-d932-4942-8716-8241eb20faf2",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from IPython import display\n",
+    "display.Image(\"ET_sensitivity.png\")"
    ]
   },
   {
