corrected some typos

--- a/notebook/GW_preprocessing.ipynb
+++ b/notebook/GW_preprocessing.ipynb
@@ -41,7 +41,7 @@
     "Analyzing the time series data obtained from gravitational wave detectors involves several steps. First, the raw data must be processed and filtered to remove noise, instrumental artifacts, and environmental disturbances. Various algorithms and techniques are employed to enhance the signal-to-noise ratio and extract the gravitational wave signal from the data. \n",
     "The time series data also provides valuable information about the properties of the source that generated the gravitational wave. By comparing the observed signal with theoretical models, scientists can infer the masses, spins, and orbital parameters of the binary system that produced the waves. This information helps deepen our understanding of astrophysical processes, such as the formation and evolution of black holes and neutron stars.Moreover, the continuous monitoring of gravitational wave data over time allows scientists to search for transient events and study their statistical properties. By analyzing the distribution of events and their occurrence rates, researchers can gain insights into the astrophysical populations that produce gravitational waves.\n",
     "\n",
-    "We will examine in the followinf steps how to read, plot, preprocess, transform and prepare a GW data set for Machine Learning application."
+    "We will examine in the following steps how to read, plot, preprocess, transform and prepare a GW data set for Machine Learning application."
    ]
   },
   {
@@ -68,11 +68,13 @@
    "metadata": {},
    "source": [
     "The purpose of whitening is to modify the data such that the noise is spectrally flat, meaning it has an equal amount of power across all frequencies. This is done by applying a filter that compensates for the frequency-dependent response of the detector. The whitening process significantly improves the sensitivity of the detectors, enabling scientists to extract weak signals from the noise and identify potential gravitational wave events.\n",
-    "Whitening can be done using techniques in frequency domain or in time-domain\n",
+    "Whitening can be done using techniques in frequency domain or in time-domain.\n",
+    "\n",
     "* ### Whitening in frequency domain\n",
     "    The whitening process involves several steps. First, the data is transformed into the frequency domain using techniques such as fast Fourier transforms (FFT). Then, the noise spectrum is estimated by analyzing the power spectral density of the data. This spectrum represents the distribution of noise power across different frequencies.\n",
     "Next, an inverse filter is applied to the data, which modifies the spectrum of the signal to flatten the noise. Essentially, the inverse filter boosts or attenuates specific frequency components to compensate for the frequency-dependent response of the detector. This equalization allows gravitational wave signals to be more easily distinguished from the noise.\n",
     "After the whitening procedure, the data is transformed back into the time domain, where it undergoes further analysis and searches for gravitational wave signals using sophisticated algorithms.\n",
+    "\n",
     "* ### Whitening in time domain\n",
     "The parametric estimator for whitening in the time domain involves selecting a noise model, estimating its parameters from the data, and subtracting or filtering out the estimated noise component. \n",
     "In the time domain, a parametric estimator assumes a specific mathematical model or functional form for the noise. This model is typically characterized by a set of parameters that are estimated from the data. \n",
